Try to fix invisible panes in safari. Move favicon to a usable place.

--- a/src/app/components/nav-overlays/nav-overlays.component.scss
+++ b/src/app/components/nav-overlays/nav-overlays.component.scss
@@ -1,6 +1,9 @@
 .sidenav-drawer-container {
   z-index: 1002; // leaflet tries to flex with z-index 1000?
 }
+.mat-drawer-container {
+  overflow: visible;
+}
 
 .toolbar-mid-space {
   flex: 1 1 auto;
